--- a/src/Forms/Reservar.form
+++ b/src/Forms/Reservar.form
@@ -5,7 +5,9 @@
     <constraints>
       <xy x="20" y="20" width="500" height="400"/>
     </constraints>
-    <properties/>
+    <properties>
+      <background color="-11883306"/>
+    </properties>
     <border type="none"/>
     <children>
       <vspacer id="d38c6">
@@ -22,7 +24,12 @@
         <children>
           <component id="de95" class="javax.swing.JTable" binding="tabl">
             <constraints/>
-            <properties/>
+            <properties>
+              <background color="-11973550"/>
+              <foreground color="-1"/>
+              <gridColor color="-1"/>
+              <selectionForeground color="-1"/>
+            </properties>
           </component>
         </children>
       </scrollpane>
@@ -31,6 +38,9 @@
           <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <background color="-9064132"/>
+          <focusable value="false"/>
+          <foreground color="-1"/>
           <text value="Reservar"/>
         </properties>
       </component>
@@ -39,7 +49,10 @@
           <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Regresar"/>
+          <background color="-1744027"/>
+          <focusable value="false"/>
+          <foreground color="-1"/>
+          <text value="Regresar a Inicio"/>
         </properties>
       </component>
       <component id="cf84f" class="javax.swing.JLabel">
@@ -48,6 +61,7 @@
         </constraints>
         <properties>
           <font name="Bernard MT Condensed" size="24"/>
+          <foreground color="-1"/>
           <text value="Reserva de Canchas"/>
         </properties>
       </component>
@@ -65,6 +79,8 @@
           <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <background color="-13208428"/>
+          <foreground color="-1"/>
           <model>
             <item value="-- Seleccione un horario --"/>
             <item value="14:00 - 15:00"/>
