--- a/src/Forms/editarJugadores.form
+++ b/src/Forms/editarJugadores.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="Forms.editarJugadores">
-  <grid id="27dc6" binding="Pane" layout-manager="GridLayoutManager" row-count="24" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="Pane" layout-manager="GridLayoutManager" row-count="25" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
       <xy x="20" y="20" width="500" height="896"/>
@@ -24,7 +24,7 @@
       </component>
       <vspacer id="aeb70">
         <constraints>
-          <grid row="23" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false">
+          <grid row="24" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false">
             <preferred-size width="252" height="14"/>
           </grid>
         </constraints>
@@ -85,7 +85,7 @@
           <background color="-1319217"/>
           <focusable value="false"/>
           <foreground color="-16777216"/>
-          <text value="Fecha Nacimiento"/>
+          <text value="Fecha de Nacimiento"/>
         </properties>
       </component>
       <component id="1a24c" class="javax.swing.JButton" binding="telBtn">
@@ -98,7 +98,7 @@
           <background color="-1319217"/>
           <focusable value="false"/>
           <foreground color="-16777216"/>
-          <text value="Telefono"/>
+          <text value="Teléfono"/>
         </properties>
       </component>
       <component id="bb3bb" class="javax.swing.JButton" binding="conBtn">
@@ -164,7 +164,7 @@
       </component>
       <component id="5dfdb" class="javax.swing.JButton" binding="verBtn">
         <constraints>
-          <grid row="19" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+          <grid row="20" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="252" height="34"/>
           </grid>
         </constraints>
@@ -177,7 +177,7 @@
       </component>
       <component id="65a2d" class="javax.swing.JButton" binding="regrBtn">
         <constraints>
-          <grid row="22" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+          <grid row="23" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="252" height="34"/>
           </grid>
         </constraints>
@@ -190,7 +190,7 @@
       </component>
       <component id="ef04b" class="javax.swing.JButton" binding="elegBtn">
         <constraints>
-          <grid row="21" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+          <grid row="22" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="252" height="34"/>
           </grid>
         </constraints>
@@ -203,7 +203,7 @@
       </component>
       <component id="5a415" class="javax.swing.JButton" binding="actuBtn">
         <constraints>
-          <grid row="20" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+          <grid row="21" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="252" height="34"/>
           </grid>
         </constraints>
@@ -225,7 +225,7 @@
       </component>
       <component id="aee66" class="javax.swing.JLabel" binding="ver2">
         <constraints>
-          <grid row="18" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="19" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <foreground color="-1"/>
@@ -241,7 +241,7 @@
       </component>
       <component id="a673e" class="javax.swing.JPasswordField" binding="confcla">
         <constraints>
-          <grid row="17" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+          <grid row="18" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="252" height="34"/>
           </grid>
         </constraints>
@@ -264,6 +264,15 @@
         <properties>
           <foreground color="-1"/>
           <text value=""/>
+        </properties>
+      </component>
+      <component id="589c9" class="javax.swing.JLabel" binding="confi">
+        <constraints>
+          <grid row="17" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <foreground color="-1"/>
+          <text value="Confirme la contraseña"/>
         </properties>
       </component>
     </children>
